Archive2/e5/ae90a4dd2f0942/output
main.cpp:9:33: warning: unused parameter 'rhs' [-Wunused-parameter]
    void operator==(const Wrap& rhs)
                                ^
main.cpp:31:9: error: value of type 'void' is not contextually convertible to 'bool'
    if (foo == bar)
        ^~~~~~~~~~
1 warning and 1 error generated.
